--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/lhas/exchange-checker-backend#readme",
   "dependencies": {
+    "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
+    "nodemon": "^1.12.5",
     "socket.io": "^2.0.4"
   }
 }
