--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.1",
     "dotenv": "^4.0.0",
     "nodemon": "^1.12.5",
+    "now-env": "^1.4.0",
     "socket.io": "^2.0.4"
   }
 }
