--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "dependencies": {
     "axios": "^0.17.1",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "nodemon": "^1.12.5",
     "now-env": "^1.4.0",
     "socket.io": "^2.0.4"
+  },
+  "engines": {
+    "node": "9.2.0"
   }
 }
